[gd_scene load_steps=17 format=3 uid="uid://cw68gmlhcl6mj"]

[ext_resource type="Script" path="res://scenes/game_scene/game_scene.gd" id="1_mv03a"]
[ext_resource type="Texture2D" uid="uid://ca1yrloysch5f" path="res://assets/sprites/sun_sprite.png" id="2_jlln7"]
[ext_resource type="PackedScene" uid="uid://dl6oldj7m8yqk" path="res://components/pipe/pipe.tscn" id="2_v0ok5"]
[ext_resource type="Texture2D" uid="uid://bsd0amtte1g6u" path="res://assets/images/mountains.png" id="2_w8nyy"]
[ext_resource type="PackedScene" uid="uid://b06pkb7qcdlck" path="res://components/birdie/birdie.tscn" id="3_gpcph"]
[ext_resource type="FontFile" uid="uid://kl7l1rnj2f6v" path="res://assets/Myfont-Regular.ttf" id="4_ggjaw"]
[ext_resource type="PackedScene" uid="uid://b760t0vhgbeay" path="res://components/mute_button/mute_button.tscn" id="7_lnful"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bj4e4"]
size = Vector2(480, 848)

[sub_resource type="AtlasTexture" id="AtlasTexture_vunny"]
atlas = ExtResource("2_jlln7")
region = Rect2(0, 0, 225, 225)

[sub_resource type="AtlasTexture" id="AtlasTexture_la1ci"]
atlas = ExtResource("2_jlln7")
region = Rect2(225, 0, 225, 225)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlsyn"]
atlas = ExtResource("2_jlln7")
region = Rect2(450, 0, 225, 225)

[sub_resource type="SpriteFrames" id="SpriteFrames_g4j4e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vunny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la1ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlsyn")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnit4"]
size = Vector2(480, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jutq"]
size = Vector2(8, 768)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q35ve"]
size = Vector2(16, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1vki"]
size = Vector2(128, 8)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_mv03a")

[node name="BackgroundColorCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundColorRect" type="ColorRect" parent="BackgroundColorCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_lock_ = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(240, 424)
shape = SubResource("RectangleShape2D_bj4e4")
metadata/_edit_lock_ = true

[node name="SunAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(112, 224)
sprite_frames = SubResource("SpriteFrames_g4j4e")
autoplay = "default"
frame_progress = 0.636846
metadata/_edit_lock_ = true

[node name="Background" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Mountains" type="Sprite2D" parent="Background"]
position = Vector2(576, 672)
scale = Vector2(2, 2)
texture = ExtResource("2_w8nyy")
metadata/_edit_lock_ = true

[node name="Mountains2" type="Sprite2D" parent="Background"]
position = Vector2(1664, 672)
scale = Vector2(2, 2)
texture = ExtResource("2_w8nyy")
metadata/_edit_lock_ = true

[node name="Bounds" type="StaticBody2D" parent="."]
position = Vector2(0, 1264)
collision_layer = 8
collision_mask = 0
metadata/_edit_lock_ = true

[node name="TopCollisionShape2D" type="CollisionShape2D" parent="Bounds"]
position = Vector2(240, -1256)
shape = SubResource("RectangleShape2D_pnit4")
metadata/_edit_lock_ = true

[node name="BottomCollisionShape2D" type="CollisionShape2D" parent="Bounds"]
position = Vector2(240, -424)
shape = SubResource("RectangleShape2D_pnit4")
metadata/_edit_lock_ = true

[node name="PipeSetNode2D" type="Node2D" parent="."]
position = Vector2(512, 0)
metadata/_edit_lock_ = true

[node name="Pipe" parent="PipeSetNode2D" instance=ExtResource("2_v0ok5")]
position = Vector2(0, -64)
collision_layer = 2
collision_mask = 0
metadata/_edit_lock_ = true

[node name="Pipe2" parent="PipeSetNode2D" instance=ExtResource("2_v0ok5")]
position = Vector2(0, 832)
collision_layer = 2
collision_mask = 0
metadata/_edit_lock_ = true

[node name="ScoreArea2D" type="Area2D" parent="PipeSetNode2D"]
position = Vector2(192, 320)
collision_layer = 4
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeSetNode2D/ScoreArea2D"]
position = Vector2(4, 384)
shape = SubResource("RectangleShape2D_3jutq")
metadata/_edit_lock_ = true

[node name="Birdie" parent="." instance=ExtResource("3_gpcph")]
position = Vector2(128, 224)
collision_layer = 0
collision_mask = 8
metadata/_edit_lock_ = true

[node name="RespawnArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RespawnArea2D"]
position = Vector2(-160, -64)
shape = SubResource("RectangleShape2D_q35ve")
metadata/_edit_lock_ = true

[node name="DeathZoneArea2D" type="Area2D" parent="."]
position = Vector2(0, 824)
collision_layer = 2
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZoneArea2D"]
position = Vector2(128, 4)
shape = SubResource("RectangleShape2D_b1vki")
metadata/_edit_lock_ = true

[node name="UICanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="CurrentScoreLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 88.0
offset_right = -16.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ggjaw")
theme_override_font_sizes/font_size = 84
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HighScoreLabel" type="Label" parent="UICanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -464.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ggjaw")
theme_override_font_sizes/font_size = 28
text = "High Score 0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="MuteButton" parent="." instance=ExtResource("7_lnful")]
metadata/_edit_lock_ = true

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="death" from="Birdie" to="." method="_on_birdie_death"]
[connection signal="score" from="Birdie" to="." method="_on_birdie_score"]
[connection signal="area_entered" from="RespawnArea2D" to="." method="_on_respawn_area_2d_area_entered"]
